[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ui/prototype/UIArchitecturePrototype.gd" id="1"]
[ext_resource type="PackedScene" path="res://ui/widgets/EnvPanel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://ui/components/TopBanner.tscn" id="3"]

[node name="UIArchitecturePrototype" type="Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="RootMargin" type="MarginContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="RootStack" type="VBoxContainer" parent="RootMargin"]
layout_mode = 2
offset_right = 1032.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TopBanner" type="PanelContainer" parent="RootMargin/RootStack"]
custom_minimum_size = Vector2(0, 96)
size_flags_horizontal = 3

[node name="TopBanner" parent="RootMargin/RootStack/TopBanner" instance=ExtResource("3")]
unique_name_in_owner = true

[node name="MainStack" type="HBoxContainer" parent="RootMargin/RootStack"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SideDock" type="VBoxContainer" parent="RootMargin/RootStack/MainStack"]
visible = false
size_flags_vertical = 3
custom_minimum_size = Vector2(220, 0)
theme_override_constants/separation = 12

[node name="DockTitle" type="Label" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Tabs"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.66, 0.75, 0.83, 1)

[node name="HomeDockButton" type="Button" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Home"

[node name="StoreDockButton" type="Button" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Store"

[node name="ResearchDockButton" type="Button" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Research"

[node name="AutomationDockButton" type="Button" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Automation"

[node name="PrestigeDockButton" type="Button" parent="RootMargin/RootStack/MainStack/SideDock"]
text = "Prestige"

[node name="CanvasWrapper" type="Control" parent="RootMargin/RootStack/MainStack"]
layout_mode = 2
offset_left = 0.0
offset_right = 0.0
offset_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnvironmentWrapper" type="VBoxContainer" parent="RootMargin/RootStack/MainStack"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
size_flags_horizontal = 1
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="EnvironmentPanel" parent="RootMargin/RootStack/MainStack/EnvironmentWrapper" instance=ExtResource("2")]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DesktopSheetAnchor" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/EnvironmentWrapper"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
custom_minimum_size = Vector2(220, 0)

[node name="CanvasPanel" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
clip_contents = true

[node name="FactoryViewportContainer" type="ViewportContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/CanvasPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
stretch = true
mouse_filter = 1

[node name="FactoryViewport" type="SubViewport" parent="RootMargin/RootStack/MainStack/CanvasWrapper/CanvasPanel/FactoryViewportContainer"]
size = Vector2i(640, 360)
transparent_bg = true
disable_3d = true
render_target_update_mode = 3
canvas_cull_mask = 4294967295

[node name="CanvasPlaceholder" type="ColorRect" parent="RootMargin/RootStack/MainStack/CanvasWrapper/CanvasPanel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.12, 0.16, 1)

[node name="CanvasInfo" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/CanvasPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -180.0
offset_top = 16.0
offset_right = 180.0
offset_bottom = 48.0
text = "Factory Canvas"
horizontal_alignment = 1

[node name="CanvasMessage" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/CanvasPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -24.0
offset_right = 200.0
offset_bottom = 24.0
text = "Interact here with pinch, pan, and keyboard navigation."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MobileSheetAnchor" type="Control" parent="RootMargin/RootStack/MainStack/CanvasWrapper"]
layout_mode = 2
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -376.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3

[node name="SheetOverlay" type="Control" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HomeSheet" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay"]
visible = true

[node name="HomeMargin" type="MarginContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HomeColumn" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="HomeSummaryRow" type="HBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HomeSoftLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn/HomeSummaryRow"]
size_flags_horizontal = 1
text = "Egg Credits: 0"

[node name="HomeStorageLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn/HomeSummaryRow"]
size_flags_horizontal = 1
horizontal_alignment = 2
text = "Storage 0 / 0 (0%)"

[node name="HomeStageLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
text = "Farm Stage: Hatchery"

[node name="HomePrestigeLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
text = "Reputation Stars: 0"

[node name="HomeFeedStatusLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
text = "Feed silo ready"

[node name="HomeFeedBar" type="ProgressBar" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
size_flags_horizontal = 3
show_percentage = false
max_value = 1.0
step = 0.01
value = 0.0

[node name="HomeFeedHintLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
visible = false
text = "+0.0/s boost"
theme_override_colors/font_color = Color(0.66, 0.75, 0.83, 1)

[node name="HomeFeedQueueLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
visible = false
text = "Queue: 0"
theme_override_colors/font_color = Color(0.95, 0.82, 0.18, 1)

[node name="HomeFeedButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
size_flags_horizontal = 3
text = "Hold to Feed"

[node name="HomePromoteButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
size_flags_horizontal = 3
text = "Upgrade to Next Stage"

[node name="HomeUtilityRow" type="HBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn"]
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HomeCopyButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn/HomeUtilityRow"]
size_flags_horizontal = 1
text = "Copy Save"

[node name="HomePasteButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn/HomeUtilityRow"]
size_flags_horizontal = 1
text = "Paste Save"

[node name="HomeSettingsButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/HomeSheet/HomeMargin/HomeColumn/HomeUtilityRow"]
size_flags_horizontal = 1
text = "Settings"

[node name="StoreSheet" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay"]
visible = false

[node name="StoreMargin" type="MarginContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="StoreColumn" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet/StoreMargin"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="StoreTitle" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet/StoreMargin/StoreColumn"]
text = "Store Upgrades"
theme_override_font_sizes/font_size = 18

[node name="StoreProdButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet/StoreMargin/StoreColumn"]
size_flags_horizontal = 3
text = "Buy Production"

[node name="StoreCapButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet/StoreMargin/StoreColumn"]
size_flags_horizontal = 3
text = "Buy Capacity"

[node name="StoreAutoButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/StoreSheet/StoreMargin/StoreColumn"]
size_flags_horizontal = 3
text = "Buy Automation"

[node name="ResearchSheet" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay"]
visible = false

[node name="ResearchMargin" type="MarginContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ResearchColumn" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ResearchTitle" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin/ResearchColumn"]
text = "Research Projects"
theme_override_font_sizes/font_size = 18

[node name="ResearchSummaryLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin/ResearchColumn"]
text = "Innovation Lab — Research Points: 0"

[node name="ResearchProdButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin/ResearchColumn"]
size_flags_horizontal = 3
text = "Feed Conversion R&D"

[node name="ResearchCapButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin/ResearchColumn"]
size_flags_horizontal = 3
text = "Modular Coops"

[node name="ResearchAutoButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/ResearchSheet/ResearchMargin/ResearchColumn"]
size_flags_horizontal = 3
text = "Drone Feeders"

[node name="AutomationSheet" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay"]
visible = false

[node name="AutomationMargin" type="MarginContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/AutomationSheet"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="AutomationColumn" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/AutomationSheet/AutomationMargin"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="AutomationTitle" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/AutomationSheet/AutomationMargin/AutomationColumn"]
text = "Automation Controls"
theme_override_font_sizes/font_size = 18

[node name="AutomationInfoLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/AutomationSheet/AutomationMargin/AutomationColumn"]
text = "Enable feeders and conveyor routines to keep production hands-free."
autowrap_mode = 3

[node name="AutomationAutoButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/AutomationSheet/AutomationMargin/AutomationColumn"]
size_flags_horizontal = 3
text = "Unlock Automation"

[node name="PrestigeSheet" type="PanelContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay"]
visible = false

[node name="PrestigeMargin" type="MarginContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/PrestigeSheet"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="PrestigeColumn" type="VBoxContainer" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/PrestigeSheet/PrestigeMargin"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="PrestigeTitle" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/PrestigeSheet/PrestigeMargin/PrestigeColumn"]
text = "Rebranding"
theme_override_font_sizes/font_size = 18

[node name="PrestigeStatusLabel" type="Label" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/PrestigeSheet/PrestigeMargin/PrestigeColumn"]
text = "Reputation Stars: 0 (Next Rebrand: +0)"

[node name="PrestigeButton" type="Button" parent="RootMargin/RootStack/MainStack/CanvasWrapper/MobileSheetAnchor/SheetOverlay/PrestigeSheet/PrestigeMargin/PrestigeColumn"]
size_flags_horizontal = 3
text = "Rebrand & Advance"

[node name="BottomBar" type="MarginContainer" parent="RootMargin/RootStack"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 0

[node name="TabBar" type="HBoxContainer" parent="RootMargin/RootStack/BottomBar"]
layout_mode = 2
offset_left = 12.0
offset_top = 0.0
offset_right = 996.0
offset_bottom = 0.0
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HomeButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
text = "Home"

[node name="StoreButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
text = "Store"

[node name="LeftSpacer" type="Control" parent="RootMargin/RootStack/BottomBar/TabBar"]
size_flags_horizontal = 3

[node name="FeedButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
size_flags_horizontal = 1
text = "Feed"

[node name="RightSpacer" type="Control" parent="RootMargin/RootStack/BottomBar/TabBar"]
size_flags_horizontal = 3

[node name="ResearchButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
text = "Research"

[node name="AutomationButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
text = "Automation"

[node name="PrestigeButton" type="Button" parent="RootMargin/RootStack/BottomBar/TabBar"]
text = "Prestige"
